[gd_scene load_steps=28 format=2]

[ext_resource path="res://sprites/act 2 setting/scene 4/wall.png" type="Texture" id=1]
[ext_resource path="res://sprites/act 2 setting/scene 4/road2.png" type="Texture" id=2]
[ext_resource path="res://sprites/act 2 setting/scene 5/ladder2.png" type="Texture" id=3]
[ext_resource path="res://player/playerLeft.tscn" type="PackedScene" id=4]
[ext_resource path="res://act3/scene4/sewerEntrance.gd" type="Script" id=5]
[ext_resource path="res://sprites/act3settings/scene4/sewerWater1.PNG" type="Texture" id=6]
[ext_resource path="res://sprites/act3settings/scene4/sewerWater3.PNG" type="Texture" id=7]
[ext_resource path="res://sprites/act3settings/scene4/sewerWater2.PNG" type="Texture" id=8]
[ext_resource path="res://sprites/act3settings/scene4/sewerOverlay.PNG" type="Texture" id=9]
[ext_resource path="res://sprites/UI/dialoguebox copy.png" type="Texture" id=10]
[ext_resource path="res://sprites/UI/the-unseen/the unseen.ttf" type="DynamicFontData" id=11]
[ext_resource path="res://act3/scene4/dialoguebox.gd" type="Script" id=12]
[ext_resource path="res://sounds/458587__inspectorj__ui-mechanical-text-scroll-03-fx-01-loop-[AudioTrimmer.com].wav" type="AudioStream" id=13]
[ext_resource path="res://sprites/Act1settings/sceneone/dark filter.png" type="Texture" id=14]
[ext_resource path="res://sprites/Act1settings/sceneone/vignette.png" type="Texture" id=15]
[ext_resource path="res://sprites/UI/continuesprite copy.png" type="Texture" id=16]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 209.515, 1263.21 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4708.49, 164.076 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 274.057, 2960.21 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 258.494, 2532.24 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 8 ), ExtResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 1.0
} ]

[sub_resource type="Animation" id=6]
resource_name = "New Anim"
length = 30.0
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 6879.13, -0.25, 0, 0.25, 0, 481.514, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 30 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/keys = {
"points": PoolRealArray( 1537.78, -0.25, 0, 0.25, 0, 1514.93, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 30 )
}

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 219.588, 2718.99 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 297.401, 2306.58 )

[sub_resource type="Animation" id=9]
resource_name = "New Anim"
length = 40.0
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( -431.001, -0.25, 0, 0.25, 0, -481.39, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 40 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/keys = {
"points": PoolRealArray( 1289.33, -0.25, 0, 0.25, 0, 1490.88, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 40 )
}

[sub_resource type="DynamicFont" id=10]
size = 100
font_data = ExtResource( 11 )

[sub_resource type="Animation" id=11]
resource_name = "New Anim"
length = 2.0
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 5791.86, -0.25, 0, 0.25, 0, 5791.86, -0.25, 0, 0.25, 0, 5791.86, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1, 2 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 166.327, -0.25, 0, 0.25, 0, 250, -0.25, 0, 0.25, 0, 166.327, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1, 2 )
}

[node name="Node2D" type="Node2D"]
position = Vector2( -4003.21, -79.2949 )
script = ExtResource( 5 )

[node name="player" parent="." instance=ExtResource( 4 )]
position = Vector2( 6202.14, 1471.07 )

[node name="CanvasLayer" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="CanvasLayer"]

[node name="Sprite" type="Sprite" parent="CanvasLayer/ParallaxLayer"]
position = Vector2( 1912.58, 989.625 )
texture = ExtResource( 1 )

[node name="Sprite2" type="Sprite" parent="CanvasLayer/ParallaxLayer"]
position = Vector2( -1919.21, 1011.72 )
texture = ExtResource( 1 )

[node name="Sprite3" type="Sprite" parent="CanvasLayer/ParallaxLayer"]
position = Vector2( 845.777, 851.601 )
texture = ExtResource( 2 )

[node name="Sprite4" type="Sprite" parent="CanvasLayer/ParallaxLayer"]
position = Vector2( -2731.46, 846.465 )
texture = ExtResource( 2 )
flip_h = true

[node name="ladder" type="Area2D" parent="CanvasLayer/ParallaxLayer"]
position = Vector2( -13.5957, -205.738 )

[node name="Sprite5" type="Sprite" parent="CanvasLayer/ParallaxLayer/ladder"]
position = Vector2( 3284.66, 894.928 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="CanvasLayer/ParallaxLayer/ladder"]
position = Vector2( 3159.9, 842.549 )
shape = SubResource( 1 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 4098.94, 1971.15 )
shape = SubResource( 2 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( -194.534, 15.5628 )
shape = SubResource( 3 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 7781.36, 1174.99 )
shape = SubResource( 4 )

[node name="sewerWater" type="AnimatedSprite" parent="."]
position = Vector2( 481.514, 1467.16 )
scale = Vector2( 3.56214, 1.46418 )
frames = SubResource( 5 )
playing = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="sewerWater"]
autoplay = "New Anim"
"anims/New Anim" = SubResource( 6 )

[node name="leftExit" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="leftExit"]
position = Vector2( 4059.06, 402.866 )
shape = SubResource( 7 )

[node name="rightExit" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="rightExit"]
position = Vector2( 7695.77, 801.48 )
shape = SubResource( 8 )

[node name="Sprite5" type="Sprite" parent="."]
position = Vector2( 551.803, 1493.8 )
scale = Vector2( 3.96132, 1.88936 )
texture = ExtResource( 9 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite5"]
"anims/New Anim" = SubResource( 9 )

[node name="dialoguebox" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="dialoguebox"]
anchor_left = 143.875
anchor_top = 4.9
anchor_right = 143.875
anchor_bottom = 4.9
margin_left = -1614.0
margin_right = 1614.0
margin_bottom = 500.0
texture = ExtResource( 10 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="dialoguebox"]
anchor_left = 143.75
anchor_top = 7.45
anchor_right = 143.75
anchor_bottom = 7.45
margin_left = -1423.0
margin_right = 1423.0
margin_bottom = 343.0
custom_fonts/normal_font = SubResource( 10 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="dialoguebox"]

[node name="continuesprite" type="Sprite" parent="dialoguebox"]
position = Vector2( 5791.86, 250 )
scale = Vector2( 2.13841, 2.07927 )
texture = ExtResource( 16 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="dialoguebox/continuesprite"]
autoplay = "New Anim"
"anims/New Anim" = SubResource( 11 )

[node name="Type" type="AudioStreamPlayer" parent="dialoguebox"]
stream = ExtResource( 13 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 4446.62, 1069.32 )
scale = Vector2( 2.69158, 1 )
texture = ExtResource( 14 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 3743.76, 1099.14 )
scale = Vector2( 1.08908, 1.0288 )
texture = ExtResource( 15 )
[connection signal="body_entered" from="leftExit" to="." method="_on_leftExit_body_entered"]
[connection signal="body_entered" from="rightExit" to="." method="_on_rightExit_body_entered"]
[connection signal="tree_exited" from="dialoguebox" to="." method="_on_dialoguebox_tree_exited"]
[connection signal="tween_completed" from="dialoguebox/Tween" to="dialoguebox" method="_on_Tween_tween_completed"]
